changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix possible crash using the singing skill.
neodeno 2010-08-26

Remove new lines in town portal messages.
Nicolas Weeger 2010-08-16

Fix container-related crash, when a plugin removes the container or equivalent.
Nicolas Weeger 2010-08-16

server/c_range.c:
Fix missing assignment of spell in player object - only results in crashes if
casting time is used.
MSW 2010-08-14

Fix wrong attack roll adjust for player in the dark with xray.
Nicolas Weeger 2010-08-14

Wrap player state change to a function.
Nicolas Weeger 2010-08-14

Correctly inform player of lost overall level at death.
Nicolas Weeger 2010-08-14

Make Python's Object.Anim a String in both read and write.
Raise an error if invalid animation is set.
Nicolas Weeger 2010-08-14

Make Python's Object.Face a String in both read and write.
Raise an error if invalid face is set.
Nicolas Weeger 2010-08-14

Fix accidentally broke 'tell' command.
Nicolas Weeger 2010-08-10

Fix broken 'curse' spell.
Nicolas Weeger 2010-08-08

Merge split lines in artifacts messages.
Nicolas Weeger 2010-08-08

Don't change decor's move_block in random maps, this messes item merging.
Nicolas Weeger 2010-08-07

Fix mover-related crash if in an inventory.
Nicolas Weeger 2010-08-07

Change plugin hooks prototype, don't return anything. Make functions static.
Nicolas Weeger 2010-08-07

Change event listener prototype for plugins to return int instead of void*.
Nicolas Weeger 2010-08-07

Remove unused 'command_' return values. Change function prototype to make
'params' const. Fix some const discarding.
Nicolas Weeger 2010-08-05
